--- a/website/pages/templates/pages/gallery.html
+++ b/website/pages/templates/pages/gallery.html
@@ -58,17 +58,19 @@
 								<div style="width:32%;padding:5px;float:left;text-align:center">
 									<!--<a href="{{ img.image.url }}" data-lightbox="{{ album.album_name }}" data-title="{{ img.caption }}">-->
 										<div class="crop_gallery" style="width:100%;display:inline-block;
-										background-image:url({% static 'pages/images/gallery_title_background.png' %}),url({{ img.image.url }});
-										background-position: center, left top;
+										background-image:url({% static 'pages/images/gallery_title_background_2.png' %}), url({% static 'pages/images/gallery_image_fade.png' %}), url({{ img.image.url }});
+										background-position: center, left top, left top;
 										background-repeat: no-repeat; 
-										background-size: 100%, 100%;">
+										background-size: 100%, 100%, 100%";>
 											<!--<img src="{{ img.image.url }}" class="hover-shadow" style="width:100%;visibility:hidden">-->
 											
-											<div style="margin-top: 27%">
-												<h2>{{ album_category.album_category_name }}</h2>
+											<div style="height:200px; margin-top: 24%">
+												<a href="">
+													<h2 class="gallery_title">{{ album_category.album_category_name }}</h2>
+												</a>
 											</div>
 										
-											<img src="{{ img.image.url }}" style="width:100%;visibility:hidden">
+											<!--<img src="{{ img.image.url }}" style="width:100%;visibility:hidden">-->
 										
 										</div>
 									<!--</a>-->
