updated gallery backend

--- a/website/pages/templates/pages/wus.html
+++ b/website/pages/templates/pages/wus.html
@@ -34,7 +34,7 @@
 			<a href="https://www.facebook.com/TheCallingCambridge/" class="paragraph_link">The Calling</a>, or whatever the 
 			current Indie-based night is.</p>
 			
-			<h3>Upcoming WUS Events</h3>
+			<!--<h3>Upcoming WUS Events</h3>
 			
 			<p>WUS takes place every third Friday of the month. The next WUS will be advertised here.</p>
 			
@@ -79,7 +79,7 @@
 								</td>
 							</tr>
 							<tr>
-								<td colspan="2"><p>{{ event.event_info | linebreaks }}</p></td> <!--urlize-->
+								<td colspan="2"><p>{{ event.event_info | linebreaks }}</p></td>
 							</tr>
 						</table>
 					
@@ -117,7 +117,7 @@
 					
 						<br>
 						
-						<p class="break_all">{{ event.event_info | linebreaks }}</p> <!--urlize-->
+						<p class="break_all">{{ event.event_info | linebreaks }}</p>
 
 					</div>
 					
@@ -125,11 +125,11 @@
 						
 					{% endif %}
 				
-				{% endfor %}
+				{% endfor %}-->
 			
 			
 			
-			<!--<p>The next WUS will be put here shortly!</p>
+			<!--<p>The next WUS will be put here shortly!</p>-->
 			
 		</div>
 	</div>
