--- a/website/pages/templates/pages/album_categories.html
+++ b/website/pages/templates/pages/album_categories.html
@@ -58,14 +58,14 @@
 								<div style="width:32%;padding:5px;float:left;text-align:center">
 									<!--<a href="{{ img.image.url }}" data-lightbox="{{ album.album_name }}" data-title="{{ img.caption }}">-->
 										<div class="crop_gallery" style="width:100%;display:inline-block;
-										background-image:url({% static 'pages/images/gallery_title_background_2.png' %}), url({% static 'pages/images/gallery_image_fade.png' %}), url({{ img.image.url }});
+										background-image:url({% static 'pages/images/gallery_title_background_2.png' %}), url({% static 'pages/images/gallery_image_fa.png' %}), url({{ img.image.url }});
 										background-position: center, left top, left top;
 										background-repeat: no-repeat; 
 										background-size: 100%, 100%, 100%";>
 											<!--<img src="{{ img.image.url }}" class="hover-shadow" style="width:100%;visibility:hidden">-->
 											
 											<div style="height:200px; margin-top: 24%">
-												<a href="">
+												<a href="{% url 'album_category' pk=album_category.pk %}">
 													<h2 class="gallery_title">{{ album_category.album_category_name }}</h2>
 												</a>
 											</div>
@@ -77,6 +77,7 @@
 								</div>
 							{% endwith %}
 						{% endwith %}
+						
 					{% endfor %}
 					
 						<!--{% for album in album_category.album_set.all %}
